kelas istio/02. Traffic management/b. request timeout/review/vs-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review-vs
spec:
  hosts:
  - review.default.svc.cluster.local
  http:
  - fault:
      # secara sengaja kita menentukan delay response
      delay:
        percentage:
          value: 100
        fixedDelay: 3s
    route:
    - destination:
        host: review.default.svc.cluster.local
